--- a/MedicalApptBookingSystem/appsettings.json
+++ b/MedicalApptBookingSystem/appsettings.json
@@ -14,5 +14,12 @@
     "Issuer": "MedicalBookingSystem",
     "Audience": "MedicalBookingSystemUsers",
     "ExpiresInMinutes": 60
+  },
+  "Email": {
+    "From": "mannydev2025@gmail.com",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "Username": "mannydev2025@gmail.com",
+    "Password": "uypl lnzj xbhi cdta"
   }
 }
