--- a/.github/workflows/master_medicalapptbookingsystem.yml
+++ b/.github/workflows/master_medicalapptbookingsystem.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Run tests
+        run: dotnet test --no-build
+
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
@@ -62,4 +65,5 @@ jobs:
           app-name: 'MedicalApptBookingSystem'
           slot-name: 'Production'
           package: .
+
           
