--- a/.github/workflows/master_medicalapptbookingsystem.yml
+++ b/.github/workflows/master_medicalapptbookingsystem.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Run tests
-        run: dotnet test --no-build
+        run: dotnet test --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
@@ -67,3 +67,4 @@ jobs:
           package: .
 
           
+
